Fix wrong color

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #e3e3e3;
+    color: #FFFFFF;;
     font-size: 1em;
     letter-spacing: 0.1ch;
     gap: 0.5%;
